--- a/package.json
+++ b/package.json
@@ -46,26 +46,30 @@
     "test": "vitest",
     "typecheck": "vue-tsc --noEmit",
     "release": "bumpp && pnpm publish",
-    "prepublishOnly": "pnpm run build"
+    "prepublishOnly": "pnpm run build",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "peerDependencies": {
     "vue": "^3.0.0"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^7.0.1",
     "@types/node": "^25.0.3",
     "@vitejs/plugin-vue": "^6.0.3",
     "@vitest/browser-playwright": "^4.0.16",
     "bumpp": "^10.3.2",
+    "eslint": "^9.39.2",
+    "eslint-plugin-format": "^1.3.1",
     "playwright": "^1.57.0",
     "tsdown": "^0.18.1",
     "typescript": "^5.9.3",
     "vite": "^7.3.0",
+    "vitepress": "2.0.0-alpha.15",
     "vitest": "^4.0.16",
     "vitest-browser-vue": "^2.0.1",
     "vue": "^3.5.25",
-    "vue-tsc": "^3.1.8",
-    "@antfu/eslint-config": "^7.0.1",
-    "eslint": "^9.39.2",
-    "eslint-plugin-format": "^1.3.1"
+    "vue-tsc": "^3.1.8"
   }
 }
