chore: update package.json

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "deferred-render",
     "viewport"
   ],
-  "homepage": "https://github.com/Alfred-Skyblue/vuedefer#readme",
+  "homepage": "https://vuedefer.pages.dev/",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Alfred-Skyblue/vuedefer.git"
@@ -37,7 +37,8 @@
     "dist"
   ],
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   },
   "scripts": {
     "build": "tsdown",
